fix scrollbar color

--- a/packages/admin/src/theme/index.less
+++ b/packages/admin/src/theme/index.less
@@ -87,16 +87,11 @@
 	margin: 5px 10px 5px 5px;
 	transition: all 200ms ease-in-out;
 
-	border: transparent;
-	background-color: transparent;
+	border: 4px solid rgba(0, 0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.15);
 	background-clip: padding-box;
 
 	-webkit-border-radius: 7px;
-}
-
-::-webkit-scrollbar-thumb:hover{
-	border: 4px solid rgba(0, 0, 0, 0);
-	background-color: rgba(0, 0, 0, 0.15);
 }
 
 ::-webkit-scrollbar-button {
